@@ -4,7 +4,8 @@
 
 #======
 1.2.2 -> 1.2.2 dev
-- Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric (by Francesco Strazzanti)
+- Added IsAlmostCanonicalIdeal, IsNearlyGorenstein, IsGeneralizedAlmostSymmetric, IsHomogeneousNumericalSemigroup (by Francesco Strazzanti)
+- Added new section in the chapter of factorizationas, and moved IsMpure and IsPure to this new section
 - Added PseudoFrobenius, Type and FrobeniusNumber for an ideal of a numerical semigroup 
 - Added IsComplementOfIntegralIdeal and IdealByDivisorClosedSet
 - ViewString for affine semigroups now considers singular in a single generator or minimal generator
